# fronza-tts

./: .env.example  .gitignore  README.md  config.example.yaml  plan-todo.md.txt  pyproject.toml
app/: main.py
app/core/: audio_merger.py  audio_storage.py  config.py  constants.py  errors.py  fallback_engine.py  quota_manager.py  reset_policy.py  router.py  text_chunker.py  tts_service.py  usage_estimator.py
app/db/: init_db.py  models.py  session.py
app/db/repositories/: __init__.py  fallback_repo.py  provider_repo.py  quota_repo.py  usage_repo.py
app/providers/: adapter_base.py  async_voice.py  base.py  cartesia.py  elevenlabs.py  gemini.py  inworld.py  mock.py  registry.py  smallest.py
app/schemas/: errors.py  generation.py  provider.py  quota.py  tts.py  usage.py
app/tools/: refresh_quota.py  test_fallback.py  test_provider.py
app/ui/: streamlit_app.py
app/ui/components/: __init__.py  quota_badge.py
app/ui/pages/: _1_generate.py  _2_limits.py  _3_providers.py  _4_history.py  _5_compare.py
app/utils/: file_utils.py  logging.py  security.py
docs/: voice-quality-plan.md
tests/: test_fallback_engine.py  test_quota_manager.py  test_reset_policy.py  test_text_chunker.py
