[project]
name = "tts-fallback-app"
version = "0.1.0"
description = "TTS Multi-API app with free quota management and automatic fallback"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.0.0",
    "loguru>=0.7.0",
    "pydub>=0.25.0",
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
